--- a/Insuranceclaim/Insuranceclaim.csproj
+++ b/Insuranceclaim/Insuranceclaim.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
