--- a/Insuranceclaim/appsettings.json
+++ b/Insuranceclaim/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LTIN650319\\SQLEXPRESS;Database=ClaimManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
